# odoo-ai

./: .env.example  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.yaml  AGENTS.md  CLAUDE.md  CODEX.md  NEXT_PROMPT.md  TESTING.md  TEST_INFRASTRUCTURE_FIXES.md  codex_setup.sh  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.yml  mypy.ini  package-lock.json  pyproject.toml  pytest.ini
addons/cm/fishbowl_import/: AGENTS.md  __init__.py  pyproject.toml
addons/cm/fishbowl_import/migrations/0.0.0/: post-fishbowl-import-setup.py
addons/cm/fishbowl_import/models/: __init__.py  fishbowl_import_orders.py  fishbowl_importer.py  product_product.py  res_partner.py  sale_order.py  uom_uom.py
addons/cm/fishbowl_import/tests/: __init__.py
addons/cm/fishbowl_import/tests/fixtures/: base.py
addons/cm/fishbowl_import/views/: purchase_order_views.xml  stock_picking_views.xml
addons/cm/repairshopr_import/: AGENTS.md  __init__.py  __manifest__.py  pyproject.toml
addons/cm/repairshopr_import/models/: __init__.py  helpdesk_ticket.py  product_template.py  repairshopr_importer.py  repairshopr_sales.py
addons/cm/repairshopr_import/services/: __init__.py  repairshopr_sync_client.py
addons/cm/repairshopr_import/tests/: __init__.py
addons/cm/repairshopr_import/tests/fixtures/: base.py
addons/cm/repairshopr_import/tests/unit/: test_claim_canonicalization.py  test_repairshopr_mapping.py  test_repairshopr_pricing_catalog.py
addons/disable_odoo_online/: AGENTS.md  __manifest__.py  pyproject.toml
addons/disable_odoo_online/models/: publisher_warranty_contract.py
addons/disable_odoo_online/security/: ir.model.access.csv
addons/disable_odoo_online/tests/: __init__.py  test_publisher_warranty_contract.py
addons/image_enhancements/: pyproject.toml
addons/image_enhancements/migrations/19.0.1.1/: post-migration.py
addons/image_enhancements/models/: __init__.py  image_mixin.py
addons/openupgrade_scripts_custom/: pyproject.toml
addons/openupgrade_scripts_custom/scripts/auth_signup/19.0.1.0/: post-migration.py
addons/openupgrade_scripts_custom/scripts/base/19.0.1.0/: post-migration.py  pre-migration.py
addons/openupgrade_scripts_custom/scripts/cm_custom/: README.md
addons/openupgrade_scripts_custom/scripts/cm_custom/19.0.0.1/: post-migration.py  pre-migration.py  upgrade_analysis.txt
addons/openupgrade_scripts_custom/scripts/discuss_record_links/: README.md
addons/openupgrade_scripts_custom/scripts/discuss_record_links/19.0.1.0/: post-migration.py  pre-migration.py  upgrade_analysis.txt
addons/openupgrade_scripts_custom/scripts/external_ids/: README.md
addons/openupgrade_scripts_custom/scripts/external_ids/19.0.1.0.1/: post-migration.py  pre-migration.py  upgrade_analysis.txt
addons/openupgrade_scripts_custom/scripts/hr_employee_name_extended/: README.md
addons/openupgrade_scripts_custom/scripts/hr_employee_name_extended/19.0.4.0.0/: post-migration.py  pre-migration.py  upgrade_analysis.txt
addons/openupgrade_scripts_custom/scripts/mail/19.0.1.0/: pre-migration.py
addons/openupgrade_scripts_custom/scripts/mail/19.0.1.19/: post-migration.py
addons/openupgrade_scripts_custom/scripts/opw_custom/: README.md
addons/openupgrade_scripts_custom/scripts/opw_custom/19.0.8.2/: post-migration.py
addons/openupgrade_scripts_custom/scripts/product_connect/: README.md
addons/openupgrade_scripts_custom/scripts/product_connect/19.0.8.2/: post-migration.py  pre-migration.py  upgrade_analysis.txt
addons/openupgrade_scripts_custom/scripts/stock/19.0.1.1/: pre-migration.py
addons/opw/openupgrade_scripts_custom/: README.md  pyproject.toml
addons/opw_custom/: AGENTS.md  __init__.py  __manifest__.py  pyproject.toml  tsconfig.json  webpack.config.js
addons/opw_custom/controllers/: download_controllers.py
addons/opw_custom/data/: res_config_data.xml
addons/opw_custom/migrations/18.0.8.0/: post-migrate.py
addons/opw_custom/migrations/18.0.8.1/: post-migrate.py
addons/opw_custom/models/: __init__.py  product_template.py  res_partner.py
addons/opw_custom/report/: product_reports.xml
addons/opw_custom/security/: ir.model.access.csv
addons/opw_custom/static/src/js/lists/: list_autorefresh.js
addons/opw_custom/static/src/js/widgets/: qr_code_widget.js
addons/opw_custom/static/src/scss/: theme_opw.scss
addons/opw_custom/static/src/views/multigraph/: multigraph_arch_parser.js  multigraph_controller.js  multigraph_renderer.js  multigraph_view.js  (+1 more)
addons/opw_custom/static/src/xml/: qr_code_widget.xml
addons/opw_custom/static/tests/: basic.test.js  multigraph_arch_parser.test.js  multigraph_data_processing.test.js  multigraph_f1_string_fix.test.js  multigraph_metadata.test.js  multigraph_model.test.js  multigraph_multi_measure.test.js  multigraph_props_validation.test.js
addons/opw_custom/static/tests/helpers/: test_base.js
addons/opw_custom/static/tests/tours/: example_product_tour.js  multigraph_tour.js
addons/opw_custom/tests/: __init__.py
addons/opw_custom/tests/fixtures/: __init__.py  base.py  factories.py  multigraph_helpers.py  test_base.py
addons/opw_custom/tests/integration/: __init__.py  test_multigraph_fix_verification.py
addons/opw_custom/tests/js/: js_unit_tests.py
addons/opw_custom/tests/tour/: __init__.py  test_debug_connection.py  test_example_product.py  test_minimal_tour.py  test_multigraph_browser.py  test_multigraph_integration.py  test_multigraph_simple.py  test_simple_demo_tour.py  test_simple_fix.py  test_single_worker.py  test_tour_basic.py  test_tour_multigraph.py  test_worker_connectivity.py
addons/opw_custom/tests/unit/: __init__.py  test_autopost_bills_migration.py  test_basic.py  test_infrastructure_check.py  test_model_product_template.py  test_multigraph_python.py  test_multigraph_quick_integration.py  test_multigraph_view.py  test_product_factory.py  test_simple_unit.py  test_tour_coverage.py
addons/opw_custom/views/: product_inventory_wizard_views.xml  product_processing_views.xml  product_template_views.xml
addons/opw_custom/wizards/: product_label_layout.py
(+1273 files in other folders)
