[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-ai"
version = "0.1.0"
description = "AI-powered Odoo 18 Enterprise development framework"
requires-python = ">=3.12"

dependencies = [
    "psutil",
    "rich",
    "click",
    "tomli",
]

[tool.setuptools.packages.find]
include = ["tools*"]
exclude = ["addons*", "tmp*", "docker*", "patches*"]

[project.scripts]
# Core test commands
test-unit = "tools.test_commands:run_unit_tests"
test-integration = "tools.test_commands:run_integration_tests"
test-tour = "tools.test_commands:run_tour_tests"
test-all = "tools.test_commands:run_all_tests"
test-stats = "tools.test_commands:show_test_stats"
test-clean = "tools.test_commands:cleanup_all_test_artifacts"

[tool.odoo-test.timeouts]
unit = 180          # 3 minutes
integration = 600   # 10 minutes  
tour = 1800        # 30 minutes
default = 300      # 5 minutes

[tool.odoo-test.parallel]
enabled = true
workers = 4
scope = "class"    # Run test classes in parallel

[tool.ruff]
line-length = 133
target-version = "py312"

[tool.ruff.lint]
select = ["ANN"]
ignore = [
    "D", # pydocstyle
    "COM812", # trailing-comma-missing (conflicts with formatter)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
    "FBT001", # Boolean default positional argument - PyCharm shows inlay hints
    "FBT002", # Boolean positional argument - PyCharm shows inlay hints
    "TRY300", # Unnecessary else after return - prefer early returns
    "ARG001", # Unused function argument - PyCharm handles this better with context awareness
    "ARG002", # Unused method argument - PyCharm handles this better with context awareness
    "ANN201", # Missing type annotation for function - PyCharm handles this better with context awareness
]