[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "odoo-ai"
version = "0.0.0"
description = "AI-powered Odoo 18 Enterprise development framework"
requires-python = ">=3.13"

dependencies = [
    "psutil==5.9.8",
    "click",
    "pydantic",
    "pydantic_settings",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "rich",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[project.scripts]
test = "tools.testkit.cli:main"
test-validate = "tools.testkit.validate:main"
test-plan = "tools.testkit.shortcuts:test_plan"
test-unit = "tools.testkit.shortcuts:test_unit"
test-js = "tools.testkit.shortcuts:test_js"
test-integration = "tools.testkit.shortcuts:test_integration"
test-tour = "tools.testkit.shortcuts:test_tour"
test-clean = "tools.testkit.shortcuts:test_clean"
test-status = "tools.testkit.shortcuts:test_status"
test-wait = "tools.testkit.shortcuts:test_wait"
test-rerun = "tools.testkit.shortcuts:test_rerun_failures"
test-doctor = "tools.testkit.shortcuts:test_doctor"
deploy = "tools.deployer.cli:main"
restore-from-upstream = "tools.docker_runner:restore_from_upstream"  # example: uv run restore opw-dev --init
restore = "tools.restore_shortcuts:main"
prod-gate = "tools.prod_gate:main"
stack = "tools.stack_cli:main"

[tool.uv]
preview = true

[tool.odoo-test.timeouts]
unit = 600
integration = 900
tour = 600
js = 1200

[tool.ruff]
line-length = 133
target-version = "py313"

[tool.ruff.lint]
select = ["ANN", "UP", "B", "I"]
ignore = [
    "D", # pydocstyle
    "COM812", # trailing-comma-missing (conflicts with formatter)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
    "FBT001", # Boolean default positional argument - PyCharm shows inlay hints
    "FBT002", # Boolean positional argument - PyCharm shows inlay hints
    "TRY300", # Unnecessary else after return - prefer early returns
    "ARG001", # Unused function argument - PyCharm handles this better with context awareness
    "ARG002", # Unused method argument - PyCharm handles this better with context awareness
    "ANN201", # Missing type annotation for function - PyCharm handles this better with context awareness
]
