[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "odoo-ai"
version = "0.0.0"
description = "AI-powered Odoo 18 Enterprise development framework"
requires-python = ">=3.13"

dependencies = [
    "ariadne-codegen",
    "psutil==5.9.8",
    "click",
    "graphql-core",
    "pydantic",
    "pydantic_settings",
    "questionary",
    "requests",
    "repairshopr-api",
    "ruff",
    "rich",
    "mypy",
]

[project.optional-dependencies]
dev = [
    "debugpy",
    "lxml-stubs",
    "types-Werkzeug",
    "pip",
    "pydevd-odoo",
    "pydevd-pycharm",
    "pydantic[email,timezone]",
    "setuptools",
    "types-geoip2",
    "types-Pillow",
    "types-PyMySQL",
    "types-psycopg2",
    "types-requests",
    "watchdog",
    "websocket-client",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[project.scripts]
test = "tools.testkit.cli:main"  # example: uv run test unit --json
test-validate = "tools.testkit.validate:main"
prod-gate = "tools.prod_gate:main"
ops = "tools.ops_cli:main"

[tool.uv]
preview = true

[tool.odoo-test.timeouts]
unit = 600
integration = 900
tour = 600
js = 1200

[tool.ruff]
line-length = 133
target-version = "py313"

[tool.ruff.lint]
select = ["ANN", "UP", "B", "I"]
ignore = [
    "D", # pydocstyle
    "B018", # Ruff flags Odoo manifests (module dict literal) as useless expression
    "COM812", # trailing-comma-missing (conflicts with formatter)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
    "FBT001", # Boolean default positional argument - PyCharm shows inlay hints
    "FBT002", # Boolean positional argument - PyCharm shows inlay hints
    "TRY300", # Unnecessary else after return - prefer early returns
    "ARG001", # Unused function argument - PyCharm handles this better with context awareness
    "ARG002", # Unused method argument - PyCharm handles this better with context awareness
    "ANN201", # Missing type annotation for function - PyCharm handles this better with context awareness
    "ANN206", # Missing return type annotation for classmethod - common in test setup helpers
    "UP037", # Quoted annotations are common for Odoo plugin types without future imports
]

[tool.ruff.lint.isort]
known-first-party = ["tools"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["odoo", "odoo.*"]
ignore_missing_imports = true
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = ["repairshopr_api", "repairshopr_api.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["repairshopr_import", "repairshopr_import.*"]
disable_error_code = ["name-defined"]

[tool.pyright]
typeCheckingMode = "basic"
executionEnvironments = [
    { root = "addons", reportMissingImports = "none", reportMissingTypeStubs = "none", reportUndefinedVariable = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportUnknownVariableType = "none" },
]
