[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "image_enhancements"
version = "0.0.0"  # Real version in __manifest__.py
description = "Extended image metadata helpers"
requires-python = ">=3.13"
dependencies = [
    "pillow",
]

[tool.setuptools]
packages = []

[tool.uv]
managed = false

[tool.ruff]
line-length = 133
target-version = "py313"

[tool.ruff.lint]
select = ["ANN"]
ignore = [
    "D", # pydocstyle
    "COM812", # trailing-comma-missing (conflicts with formatter)
    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
    "FBT001", # Boolean default positional argument - PyCharm shows inlay hints
    "FBT002", # Boolean positional argument - PyCharm shows inlay hints
    "TRY300", # Unnecessary else after return - prefer early returns
    "F821", # Undefined name - needed for JetBrains Odoo magic strings like type["odoo.model.res_users"]
    "SLF001", # Private member access - PyCharm handles this better with context awareness, Odoo uses _fields etc as public API
    "ARG001", # Unused function argument - PyCharm handles this better with context awareness
    "ARG002", # Unused method argument - PyCharm handles this better with context awareness
    "ANN201", # Missing type annotation for function - PyCharm handles this better with context awareness
    "ANN202", # Missing type annotation for function - PyCharm handles this better with context awareness
    "ANN206", # Missing return type annotation for classmethod - common in test setup helpers
]
