[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openupgrade_scripts_custom"
version = "0.0.0"
description = "Custom OpenUpgrade migration scripts"
requires-python = ">=3.13"
dependencies = [
    "openupgradelib==3.12.0",
]

[tool.setuptools]
packages = []

[tool.uv]
managed = false
