[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "repairshopr_import"
version = "0.0.0"  # Real version in __manifest__.py
description = "RepairShopr import integration"
requires-python = ">=3.13"
dependencies = [
    "PyMySQL",
]

[tool.setuptools]
packages = []

[tool.uv]
managed = false
