[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "repairshopr_import"
version = "0.0.0"  # Real version in __manifest__.py
description = "RepairShopr import integration"
requires-python = ">=3.13"
dependencies = [
    "PyMySQL",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv]
managed = false
